# stringc

./: .gitignore  Cargo.toml  LICENSE  README.md
lib/: Cargo.toml
lib/src/: excel_file.rs  excel_reader.rs  excel_writer.rs  ios_generator.rs  json_data.rs  lib.rs  strings_generator.rs
lib/tests/: excel_reader_tests.rs
src/: excel_reader.rs  excel_writer.rs  ios_generator.rs  json_data.rs  main.rs  translation.rs
test_data/: test.json
