[package]
name = "stringc"
version = "0.1.0"
authors = ["Paweł Wróblewski"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
simple_excel_writer="0.1.4"
calamine = "0.18.0"